# zoom-explorer

./: .gitignore  AGENTS.md  README.md  forge.config.js  netlify.toml  package-lock.json  package.json  tsconfig.json
electron/: main.js  midi-ipc.js  midi-service.js  preload.js  settings-store.js
public/: common.css  file-browser.css  index.html  zoom-effect-mappings-ms60bp.json
scripts/: copy-public.cjs
src/: ButtonView.ts  ConfirmDialog.ts  DeviceHTMLView.ts  DeviceModel.ts  FileBrowser.ts  IDeviceModel.ts  InfoDialog.ts  Knob.ts  KnobView.ts  LCXLDevice.ts  LocalFileSystem.ts  MIDIDevice.ts  MIDIDeviceListController.ts  MIDIDeviceListHTMLView.ts  MIDIDeviceListModel.ts  MIDIDeviceManager.ts  MIDIFilterDialog.ts  MIDIProxyForIPC.ts  Model.ts  ProgressDialog.ts  Project.ts  RackDeviceHTMLView.ts  RackDeviceModel.ts  Scene.ts  SceneDeviceController.ts  SceneDeviceHTMLView.ts  SceneDeviceMIDIView.ts  SceneDeviceModel.ts  SettingsHTMLView.ts  SettingsModel.ts  SymbiosisTools.ts  UndoRedoManager.ts  VirtualMIDIDeviceController.ts  VirtualMIDIDeviceHTMLView.ts  VirtualMIDIDeviceModel.ts  ZoomCCMapperController.ts  ZoomCCMapperHTMLView.ts  ZoomCCMapperModel.ts  ZoomDevice.ts  ZoomDeviceController.ts  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: app.rs  midi.rs  mod.rs
src-tauri/src/device/: mod.rs  zoom_ms60bp.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/midi/: mod.rs  service.rs
src-tauri/src/persistence/: mod.rs  settings_store.rs
(+2 files in other folders)
